k8s/spark-master-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-master
  labels:
    app: spark-master
spec:
  selector:
    matchLabels:
      app: spark-master
  template:
    metadata:
      labels:
        app: spark-master
    spec:
      containers:
        - name: spark-master
          image: bde2020/spark-master:2.4.5-hadoop2.7
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
            - containerPort: 7077
            - containerPort: 6066
