k8s/spark-master-service.yml
apiVersion: v1
kind: Service
metadata:
  name: spark-master
spec:
  selector:
    app: spark-master
  ports:
    - name: web-ui
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: master
      protocol: TCP
      port: 7077
      targetPort: 7077
    - name: master-rest
      protocol: TCP
      port: 6066
      targetPort: 6066
  clusterIP: None
