k8s/spark-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spark-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            backend:
              serviceName: spark-master
              servicePort: 8080
